Fix overflow on mobile and scale embedded videos

--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ body {
 
     margin: 0;
     padding: 0;
+
+    width: 100vw;
 }
 
 a {
@@ -130,16 +132,34 @@ main {
             "content"
             "footer";
 
-        grid-template-columns: 1fr;
-        grid-template-rows:
-            auto    /* Header */
-            auto    /* Nav */
-            1fr     /* Content */
-            auto;   /* Footer */
+        grid-template-columns: 100%;
+
+        /* Header */
+        /* Nav */
+        /* Content *
+        /* Footer */
+        grid-template-rows: auto auto 1fr auto;
     }
 }
 
 .long-equation {
     overflow-x: auto;
     overflow-y: hidden;
+}
+
+/* From https://css-tricks.com/fluid-width-video/ */
+.videoWrapper {
+    position: relative;
+
+    /* Default of 16:9, but can be overriden with style="--aspect-ratio: 4/3;" */
+    padding-bottom: calc(var(--aspect-ratio, .5625) * 100%);
+    height: 0;
+}
+
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
